<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="79dp"
                android:layout_height="75dp"
                android:id="@+id/bookImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/bookImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookName"
                app:layout_constraintStart_toEndOf="@+id/bookImage"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/bookName"
                android:textSize="20sp" android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookWriter"
                app:layout_constraintStart_toEndOf="@+id/bookImage"
                app:layout_constraintTop_toBottomOf="@id/bookName"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:text="@string/bookWriter"
                android:textSize="18sp" android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:srcCompat="@drawable/ic_star_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>